<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.Code</groupId>
	<artifactId>Pakket-management</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Pakket-management</name>
	<description>Full stack application - Springboot &amp; React</description>
	<properties>
		<java.version>19</java.version>
		<sonar.organization>cezarpop12</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<junit.jupiter.version>5.9.1</junit.jupiter.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-websocket</artifactId>
	</dependency>
<!--		<dependency>-->
<!--			<groupId>org.springframework</groupId>-->
<!--			<artifactId>spring-websocket</artifactId>-->
<!--			<version>6.0.2</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.springframework</groupId>-->
<!--			<artifactId>spring-messaging</artifactId>-->
<!--			<version>6.0.2</version>-->
<!--		</dependency>-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
			<version>2.7.5</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-oauth2-jose</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
			<version>3.0.0</version>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>org.projectlombok</groupId>-->
<!--			<artifactId>lombok</artifactId>-->
<!--			<version>1.18.24</version>-->
<!--			<scope>provided</scope>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.webjars</groupId>-->
<!--			<artifactId>webjars-locator-core</artifactId>-->
<!--			<version>0.52</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.webjars</groupId>-->
<!--			<artifactId>sockjs-client</artifactId>-->
<!--			<version>1.5.1</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.webjars</groupId>-->
<!--			<artifactId>stomp-websocket</artifactId>-->
<!--			<version>2.3.4</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.webjars</groupId>-->
<!--			<artifactId>bootstrap</artifactId>-->
<!--			<version>5.2.3</version>-->
<!--		</dependency>-->
<!--		<dependency>-->
<!--			<groupId>org.webjars</groupId>-->
<!--			<artifactId>jquery</artifactId>-->
<!--			<version>3.6.1</version>-->
<!--		</dependency>-->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>2.1.214</version>
			<scope>test</scope>
		</dependency>


	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>18</source>
                    <target>18</target>
                </configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>   <configuration>
				<argLine>
					--illegal-access=permit
				</argLine>
				<testFailureIgnore>true</testFailureIgnore>
				<forkCount>2</forkCount>
				<reuseForks>true</reuseForks>
				<argLine>${surefireArgLine}</argLine>
			</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.8</version>
				<executions>
					<execution>
					<id>default-prepare-agent</id>
					<goals>
						<goal>prepare-agent</goal>
					</goals>
					<configuration>
						<destFile>
							${project.build.directory}/coverage-reports/jacoco.exec
						</destFile>
						<propertyName>surefireArgLine</propertyName>
					</configuration>
				</execution>
					<execution>
						<id>default-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
							<outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
        </plugins>
	</build>
</project>
